--- a/stajproje/Views/Home/Index.cshtml
+++ b/stajproje/Views/Home/Index.cshtml
@@ -6,25 +6,24 @@
 
 
 <div style="overflow-x:auto;">
-        <table class="table-warning" id="myTable">
-            <thead>
-
-                <tr class="tablo">
-                    <th>film_id</th>
-                    <th>title</th>
-                    <th>description</th>
-                    <th>release_year</th>
-                    <th>language_id</th>
-                    <th>rental_duration</th>
-                    <th>rental_rate</th>
-                    <th>length</th>
-                    <th>replacement_cost</th>
-                    <th>rating</th>
-                    <th>last_update</th>
-                    <th>special_features</th>
-                    <th>fulltext</th>
-                </tr>
-            </thead>
-        </table>
+    <table class="table-warning" id="myTable">
+        <thead>
+            <tr class="tablo">
+                <td scope="row">film_id</td>
+                <td scope="row">title</td>
+                <td scope="row">description</td>
+                <td scope="row">release_year</td>
+                <td scope="row">language_id</td>
+                <td scope="row">rental_duration</td>
+                <td scope="row">rental_rate</td>
+                <td scope="row">length</td>
+                <td scope="row">replacement_cost</td>
+                <td scope="row">rating</td>
+                <td scope="row">last_update</td>
+                <td scope="row">special_features</td>
+                <td scope="row">fulltext</td>
+            </tr>
+        </thead>
+    </table>
 
     </div>
