--- a/stajproje/Views/Home/Language.cshtml
+++ b/stajproje/Views/Home/Language.cshtml
@@ -1,20 +1,18 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Language Page";
     Layout = "~/Views/Shared/AdminLTE/_Layout.cshtml";
 }
 
 
-
 <div style="overflow-x:auto;">
-    <table class="table-warning" id="myTable1">
+    <table class="table-warning" id="myTable10">
         <thead>
             <tr class="tablo">
-                <th scope="row">category_id</th>
+                <th scope="row">language_id</th>
                 <th scope="row">name</th>
-                <th scope="row">last_update</th>                
+                <th scope="row">last_update</th>
             </tr>
         </thead>
     </table>
 
 </div>
-
