--- a/stajproje/Views/Shared/AdminLTE/_MainNavigation.cshtml
+++ b/stajproje/Views/Shared/AdminLTE/_MainNavigation.cshtml
@@ -3,7 +3,7 @@
     <a href="~/Home" class="brand-link">
         <img src="~/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
              style="opacity: .8">
-        <span class="brand-text font-weight-light">AdminLTE 3</span>
+        <span class="brand-text font-weight-light">Admin Page</span>
     </a>
     <div class="sidebar">
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
@@ -11,7 +11,7 @@
                 <img src="~/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="#" class="d-block">Alexander Pierce</a>
+                <a href="#" class="d-block">Ömer Erenler</a>
             </div>
         </div>
         <nav class="mt-2">
@@ -28,11 +28,114 @@
                     <a asp-controller="Home" asp-action="Privacy" class="nav-link">
                         <i class="nav-icon fas fa-lock"></i>
                         <p>
-                            Privacy
+                            Category
                         </p>
                     </a>
                 </li>
+                <li class="nav-item ">
+                    <a asp-controller="Home" asp-action="Payment" class="nav-link">
+                        <i class="nav-icon fas fa-credit-card"></i>
+                        <p>
+                            Payment
+                        </p>
+                    </a>
+                </li>
+
+                <li class="nav-item ">
+                    <a asp-controller="Home" asp-action="Staffsss" class="nav-link">
+                        <i class="nav-icon fas fa-user"></i>
+                        <p>
+                            Staff
+                        </p>
+                    </a>
+                </li>
+
+                <li class="nav-item ">
+                    <a asp-controller="Home" asp-action="Actor" class="nav-link">
+                        <i class="nav-icon fas fa-graduation-cap"></i>
+                        <p>
+                            Actor
+                        </p>
+                    </a>
+                </li>
+
+                <li class="nav-item ">
+                    <a asp-controller="Home" asp-action="Country" class="nav-link">
+                        <i class="nav-icon fas  fa-wifi"></i>
+                        <p>
+                            Country
+                        </p>
+                    </a>
+                </li>
+
+
+                <li class="nav-item ">
+                    <a asp-controller="Home" asp-action="Customer" class="nav-link">
+                        <i class="nav-icon fas  fa-users"></i>
+                        <p>
+                            Customer
+                        </p>
+                    </a>
+                </li>
+
+                <li class="nav-item ">
+                    <a asp-controller="Home" asp-action="Inventory" class="nav-link">
+                        <i class="nav-icon fas fa-cart-arrow-down"></i>
+                        <p>
+                            Inventory
+                        </p>
+                    </a>
+                </li>
+
+
+                <li class="nav-item ">
+                    <a asp-controller="Home" asp-action="Address" class="nav-link">
+                        <i class="nav-icon fas fa-address-book"></i>
+                        <p>
+                            Address
+                        </p>
+                    </a>
+                </li>
+
+                <li class="nav-item ">
+                    <a asp-controller="Home" asp-action="Store" class="nav-link">
+                        <i class="nav-icon fas fa-user-secret"></i>
+                        <p>
+                            Store
+                        </p>
+                    </a>
+                </li>
+
+
+                <li class="nav-item ">
+                    <a asp-controller="Home" asp-action="Language" class="nav-link">
+                        <i class="nav-icon fas fa-language"></i>
+                        <p>
+                            Language
+                        </p>
+                    </a>
+                </li>
+
+                <li class="nav-item ">
+                    <a asp-controller="Home" asp-action="City" class="nav-link">
+                        <i class="nav-icon fas fa-plane"></i>
+                        <p>
+                            City
+                        </p>
+                    </a>
+                </li>
+
+                <li class="nav-item ">
+                    <a asp-controller="Home" asp-action="Rental" class="nav-link">
+                        <i class="nav-icon fas fa-american-sign-language-interpreting"></i>
+                        <p>
+                            Rental
+                        </p>
+                    </a>
+                </li>
+
             </ul>
+            
         </nav>
     </div>
 </aside>
