--- a/stajproje/Views/Shared/AdminLTE/_Styles.cshtml
+++ b/stajproje/Views/Shared/AdminLTE/_Styles.cshtml
@@ -1,7 +1,24 @@
-﻿
+﻿<style>
+    .tablo{
+        margin : 1px ;
+        color : crimson;
 
+        
+    }
+    .table-warning {
+        border: 1px solid black;
+        margin-left :initial;
+    }
+    td, th {
+        border: 1px solid #999;
+        padding: 0.5rem;
+    }
+    
+
+</style>
 
 
 <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
 <link rel="stylesheet" href="~/css/adminlte.min.css">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+<link href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css" rel="stylesheet" type="text/css" />
