--- a/stajproje/Views/Shared/AdminLTE/_Layout.cshtml
+++ b/stajproje/Views/Shared/AdminLTE/_Layout.cshtml
@@ -17,12 +17,12 @@
                 <div class="container-fluid">
                     <div class="row mb-2">
                         <div class="col-sm-6">
-                            <h1 class="m-0 text-dark">Starter Page</h1>
+                            <h1 class="m-0 text-dark">Dvd Kiralama</h1>
                         </div>
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                <li class="breadcrumb-item active">Starter Page</li>
+                                <li class="breadcrumb-item active">Dvd Rental</li>
                             </ol>
                         </div>
                     </div>
@@ -43,5 +43,7 @@
         <partial name="AdminLTE/_Footer" />
     </div>
     <partial name="AdminLTE/_Scripts" />
+
+    
 </body>
 </html>
